# time_tracking

./: .gitignore  CONTRIBUTING.md  README.md  check_database.md  check_database.sql  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  ui_design_toggl_like.xml  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/dto/: mod.rs  project_dto.rs  task_dto.rs  time_entry_dto.rs
src-tauri/src/application/services/: application_service.rs  mod.rs
src-tauri/src/application/use_cases/: mod.rs  project_use_cases.rs  task_use_cases.rs  time_tracking_use_cases.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: mod.rs  project.rs  task.rs  time_entry.rs
src-tauri/src/domain/repositories/: mod.rs  project_repository.rs  task_repository.rs  time_entry_repository.rs
src-tauri/src/domain/services/: mod.rs  project_management_service.rs  time_tracking_service.rs
src-tauri/src/domain/value_objects/: mod.rs  project_id.rs  status.rs  task_id.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/config/: config.rs  mod.rs
src-tauri/src/infrastructure/database/: connection.rs  mod.rs
src-tauri/src/infrastructure/repositories/: mod.rs  sqlite_project_repository.rs  sqlite_task_repository.rs  sqlite_time_entry_repository.rs
src-tauri/src/presentation/: mod.rs
src-tauri/src/presentation/commands/: logging_commands.rs  (+7 more)
src-tauri/tests/: task_management_integration_test.rs
(+120 files in other folders)
